--- a/config.js.tmpl
+++ b/config.js.tmpl
@@ -33,5 +33,8 @@ module.exports = {
             //    ciphers:'SSLv3'
             //}
         }
+    },
+    sms: {
+        "url": "http://sms.ru/sms/send?api_id=30DE7FDE-B7EE-B1A2-EC92-06162C32C280"
     }
 };
